# html5ever_ext

./: Cargo.toml  LICENSE  README.md
src/: AriaRole.rs  AttributeExt.rs  Dir.rs  Draggable.rs  ElementNode.rs  HtmlDocumentOrNode.rs  HtmlError.rs  LocalNameExt.rs  Minify.rs  NodeExt.rs  QualNameExt.rs  QualNameOnlyExt.rs  RcDomExt.rs  Selectable.rs  UltraMinifyingHtmlSerializer.rs  UnattachedNode.rs  UnattachedNodeExt.rs  is_inter_element_whitespace.rs  is_space_character.rs  lib.rs  tests.html  tests.rs
